Replace createBaseModel (#2943)
* No legacy/fastest weighting in ShortestPathTreeTest

* remove createLegacy+createFastest

* fix test

* remove FastestWeighting

* remove ShortestWeighting

* actually remove ShortestWeighting

* replace some Helper.createBaseModel

* TestProfiles + Profiles

* ok

* Replace direct usages of createBaseModel

* Replace Profile.create

* more built-in profiles

* code formatting

* Remove Profiles.java, fix test

* shortcut for accessAndSpeed(vehicle, vehicle)